--- a/index.html
+++ b/index.html
@@ -2,9 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/HomeLending/Gemini_Generated_Image_5nvpty5nvpty5nvp.png" />
+
+    <!-- Иконка сайта -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="/src/assets/HomeLending/Gemini_Generated_Image_5nvpty5nvpty5nvp.png"
+    />
+
+    <!-- Адаптивность -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO -->
     <title>AIRTH</title>
+    <meta name="description" content="AIRTH — инновационная платформа для мониторинга и анализа данных о воздухе и окружающей среде." />
+    <meta name="keywords" content="AIRTH, monitoring, air quality, environment, react, vite" />
+    <meta name="author" content="AIRTH Team" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="AIRTH" />
+    <meta property="og:description" content="Инновационная платформа для мониторинга и анализа данных об окружающей среде." />
+    <meta property="og:image" content="/src/assets/HomeLending/Gemini_Generated_Image_5nvpty5nvpty5nvp.png" />
+    <meta property="og:url" content="https://www.airth.uz/" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="AIRTH" />
+    <meta name="twitter:description" content="Инновационная платформа для мониторинга и анализа данных об окружающей среде." />
+    <meta name="twitter:image" content="/src/assets/HomeLending/Gemini_Generated_Image_5nvpty5nvpty5nvp.png" />
+
+    <!-- Цвет для мобильных браузеров -->
+    <meta name="theme-color" content="#00A896" />
   </head>
   <body>
     <div id="root"></div>
